[AutoDiff] Fix forward-mode crashes related to tangent buffers

Fixes TF-984, SR-13447.

Fixes foward-mode crashed related to:
- Missing tangent buffers for non-wrt `inout` parameters
- Tangent buffers not being initialized due to the corresponding
original buffer intialization instructions being non-active
- Non-varied indirect results not being initialized
- `emitDestroyValue` crashes due to `TangentVector` value category mismatch